fixing bare URL in MD